--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <div class="col-lg-8 mx-auto">
           <h2>About me</h2>
           <p>My name is Thibaud Altazín, i'm a French and Spanish front-end web developer who lives in Paris. I like all the things that belong to art, such as graphism and music but also to everything that is related to web and new technologies.</p>
-          <p>I am currently studying at <a id="HETIC" href="http://hetic.net">HETIC</a>, a web-related school in Montreuil, and perfecting my skills more and more every day!</p>
+          <p>I am currently studying at <a class="HETIC" href="http://hetic.net">HETIC</a>, a web-related school in Montreuil, and perfecting my skills more and more every day!</p>
           <p>On this website I'll show you my projects once i have done some.</p>
         </div>
       </div>
@@ -90,7 +90,7 @@
         <div class="col-lg-8 mx-auto">
           <h2>Contact me!</h2>
           <p>Feel free to send an email at
-            <a href="mailto:thibaud.altazin@gmail.com"> my personal email adress</a> if you have any idea of project that you want to concretize!</p>
+            <a href="mailto:thibaud.altazin@gmail.com" class="mail"> my personal email adress</a> if you have any idea of project that you want to concretize!</p>
           <ul class="list-inline banner-social-buttons">
 
             <li class="list-inline-item">
